[metadata]
name = com-wechat
url = https://github.com/amchii/com-wechat-py
version = attr: com_wechat.__version__
project_urls =
    Source = https://github.com/amchii/com-wechat-py
license = BSD 3-Clause License
author = Amchii
author_email = finethankuandyou@gmail.com
description = 一个依赖于 [ComWeChatRobot](https://github.com/ljc545w/ComWeChatRobot)提供的Com接口的微信机器人
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = True
packages = find:
install_requires =
    comtypes
    psutil
    click
    websockets
    jsonrpcserver

[options.extras_require]
httprpc =
    fastapi

[options.entry_points]
console_scripts =
    wechat-bot = com_wechat.__main__:main

[flake8]
ignore = E203, E266, E402, E501, W503, W504, B950, F405, F403, C901
max-complexity = 50
select = B,C,E,F,W

[isort]
profile = black
skip = migrations
combine_as_imports = True
include_trailing_comma = True
multi_line_output = 3
